mc-istio/istiod-compat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
  labels:
    app: istiod
spec:
  selector:
    app: istiod
    istio.io/rev: 1-22-3
  ports:
  - name: https-webhook
    protocol: TCP
    port: 443
    targetPort: 15017
