mc-istio/kiali-vs-add-header.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
  labels:
    istio.io/rev: 1-22-3
spec:
  hosts:
  - kiali.localtest.me
  gateways:
  - kiali-gw
  http:
  - match:
    - uri:
        exact: /
    redirect:
      uri: /kiali
  - match:
    - uri:
        prefix: /kiali
    headers:
      request:
        set:
          x-forwarded-prefix: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
