mc-istio/kiali-vs-root.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
  labels:
    istio.io/rev: 1-22-3
spec:
  hosts:
  - kiali.localtest.me
  gateways:
  - kiali-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
